changing css colour contrast to make more eyecatching also corrected html box divs are back inside board div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
 
 /*-----Heading*/
 .heading {
+    width: 100%;
     position: relative;
     color: rgba(55, 1, 60, 1);
     background-color: rgba(255, 254, 254, 1);
@@ -29,7 +30,7 @@ body {
 }
 
 .logo {
-    width: 90%;
+    width: 60%;
     height: auto;
     position: relative;
     margin-top: 0;
@@ -42,9 +43,10 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: auto;
     background-color: rgb(70 5 76 / 75%);
+    padding: 2% 10%;
     
 }
 
@@ -84,7 +86,7 @@ body {
 
 /*Turn Status Text*/
 #status-text {
-    background-color: rgba(55, 1, 60, 1);
+    background-color: #16658b;
     color: rgba(255, 254, 254, 1);
     font-size: 40px;
     position: relative;
@@ -97,12 +99,15 @@ body {
     display: flex;
     flex-direction: column;
     background-color: rgb(242 216 248);
-    width: fit-content;
+    width: auto;
     height: 100%;
     border: 5px solid;
     border-color: #be4688;
 }
 
+.score-area {
+    width: fit-content;
+}
 
 
 .score-area h2 {
@@ -194,7 +199,7 @@ body {
     height: fit-content;
     margin-top: auto;
     padding: 2% 0;
-    background-color: rgba(159, 74, 180, 1);
+    background-color: #be4688;
 
 }
 
